--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "glob": "^7.0.3",
     "jasmine": "2.8.0",
     "jasminewd2": "^2.1.0",
+    "mysql": "^2.16.0",
     "optimist": "~0.6.0",
     "q": "1.4.1",
     "saucelabs": "^1.5.0",
